# PlatinumManual

./: README.md
PlatinumManual/: CMakeLists.txt  hyk.c  hyk.h  lyy.c  lyy.h  main.c  manage_address_list.c  manage_address_list.h  manage_diary.c  manage_diary.h  manage_password.c  manage_password.h  manage_schedule.c  manage_schedule.h  manage_url_of_web_page.c  manage_url_of_web_page.h  yyh.c  yyh.h  zyz.c  zyz.h
PlatinumManual/information/fail/: manage_web.txt
